--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -14,5 +14,6 @@
         <file>images/toRoom.png</file>
         <file>images/toReader.png</file>
         <file>card_template.html</file>
+        <file>images/kpilogo.png</file>
     </qresource>
 </RCC>
