--- a/src/orderbookdialog.ui
+++ b/src/orderbookdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>460</height>
+    <height>415</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>420</y>
-     <width>341</width>
+     <x>10</x>
+     <y>380</y>
+     <width>381</width>
      <height>32</height>
     </rect>
    </property>
@@ -175,79 +175,23 @@
      <x>10</x>
      <y>160</y>
      <width>381</width>
-     <height>101</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="title">
     <string>Выберите читателя:</string>
    </property>
-   <widget class="QLabel" name="label_5">
+   <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>15</y>
-      <width>101</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Номер абонемента:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>60</y>
-      <width>101</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Имя читателя:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>40</y>
-      <width>101</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Фамилия читателя:</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineReaderID">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>15</y>
-      <width>261</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineReaderSurname">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>40</y>
-      <width>261</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineReaderName">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>65</y>
-      <width>261</width>
+      <y>20</y>
+      <width>141</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>ID читательского билета</string>
     </property>
    </widget>
   </widget>
@@ -255,32 +199,44 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>260</y>
+     <y>210</y>
      <width>381</width>
-     <height>101</height>
+     <height>161</height>
     </rect>
    </property>
    <property name="title">
     <string>Выберите способ выдачи:</string>
    </property>
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QComboBox" name="comboBoxTypes">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>71</width>
+      <width>131</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="editable">
+     <bool>false</bool>
+    </property>
+    <property name="currentText">
+     <string/>
     </property>
    </widget>
    <widget class="QCalendarWidget" name="calendarWidget">
     <property name="geometry">
      <rect>
-      <x>165</x>
+      <x>160</x>
       <y>10</y>
       <width>216</width>
-      <height>155</height>
+      <height>141</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>216</width>
+      <height>0</height>
+     </size>
     </property>
    </widget>
   </widget>
